refactor: Clean up workflow files and use standard naming
- Removed all test-optimized*, test-with-merge-queue variants
- Renamed successful test-optimized-v2.yml to test.yml
- Removed release-optimized.yml variant
- Updated documentation to reflect simplified naming
- Kept only the working optimized test workflow with standard name

The optimized test workflow is now the default, providing:
- Parallel test and typecheck execution
- Artifact-based build sharing
- ~30-40% performance improvement

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,13 @@ on:
   pull_request:
     branches: ['*']
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  setup-and-build:
+  # Build once, use in parallel jobs
+  build:
     runs-on: ubuntu-latest
     
     steps:
@@ -29,6 +34,12 @@ jobs:
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      
+      # Create necessary directories for postinstall scripts
+      - name: Prepare directories
+        run: |
+          mkdir -p agents-docs/.source
+          touch agents-docs/.source/index.ts
       
       - name: Setup pnpm cache
         uses: actions/cache@v4
@@ -47,28 +58,36 @@ jobs:
             ${{ runner.os }}-turbo-
       
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: |
+          pnpm install --frozen-lockfile
+          # Ensure agents-manage-ui dependencies are properly installed
+          cd agents-manage-ui && pnpm install --frozen-lockfile && cd ..
       
       - name: Build packages
-        run: pnpm build
+        run: pnpm build --concurrency=200%
         env:
           TURBO_TELEMETRY_DISABLED: 1
+          TURBO_CACHE_DIR: .turbo
+          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+          TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+          NODE_OPTIONS: --max-old-space-size=4096
       
+      # Upload build artifacts for other jobs
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifacts
+          name: build-outputs
           path: |
             **/dist
             **/build
+            **/.turbo
             **/.next
             !**/.next/cache
-            **/node_modules/.cache
-            .turbo
           retention-days: 1
 
+  # Run tests in parallel with typecheck
   test:
-    needs: setup-and-build
+    needs: build
     runs-on: ubuntu-latest
     
     steps:
@@ -91,7 +110,12 @@ jobs:
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
       
-      - name: Setup pnpm cache
+      - name: Prepare directories
+        run: |
+          mkdir -p agents-docs/.source
+          touch agents-docs/.source/index.ts
+      
+      - name: Restore pnpm cache
         uses: actions/cache@v4
         with:
           path: ${{ env.STORE_PATH }}
@@ -99,25 +123,40 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       
+      - name: Setup Turborepo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: build-artifacts
+          name: build-outputs
+      
+      - name: Clean database files
+        run: |
+          echo "Cleaning up any existing database files..."
+          find . -name "*.db" -o -name "*.sqlite" | grep -v node_modules | xargs -r rm -f
       
       - name: Run tests
         run: pnpm test
         env:
           TURBO_TELEMETRY_DISABLED: 1
+          TURBO_CACHE_DIR: .turbo
           ENVIRONMENT: test
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY || 'sk-test-key-for-ci-testing' }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY || 'sk-ant-test-key-for-ci-testing' }}
-          DB_FILE_NAME: test.db 
+          DB_FILE_NAME: test.db
+          NODE_OPTIONS: --max-old-space-size=4096
 
   typecheck:
-    needs: setup-and-build
+    needs: build
     runs-on: ubuntu-latest
     
     steps:
@@ -140,7 +179,12 @@ jobs:
         run: |
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
       
-      - name: Setup pnpm cache
+      - name: Prepare directories
+        run: |
+          mkdir -p agents-docs/.source
+          touch agents-docs/.source/index.ts
+      
+      - name: Restore pnpm cache
         uses: actions/cache@v4
         with:
           path: ${{ env.STORE_PATH }}
@@ -148,15 +192,25 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       
+      - name: Setup Turborepo cache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-turbo-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-turbo-
+      
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
-          name: build-artifacts
+          name: build-outputs
       
       - name: Run typecheck
         run: pnpm typecheck
         env:
           TURBO_TELEMETRY_DISABLED: 1
+          TURBO_CACHE_DIR: .turbo
+          NODE_OPTIONS: --max-old-space-size=4096
