revert package jsons cripts

--- a/package.json
+++ b/package.json
@@ -25,12 +25,24 @@
     "coverage:enforce": "node scripts/enforce-coverage-change.mjs",
     "coverage:check": "pnpm coverage:diff && pnpm coverage:enforce",
     "lint": "turbo lint",
-    "format": "biome check --write agents-manage-ui agents-manage-api agents-run-api examples agents-cli",
+    "format": "biome format --write",
+    "format:check": "biome check --write",
     "pretypecheck": "pnpm install --frozen-lockfile",
     "typecheck": "turbo typecheck",
     "clean": "pnpm -r --parallel exec rm -rf node_modules dist build .next .turbo",
     "clean:turbo": "turbo clean",
-    "prepare": "husky"
+    "prepare": "husky",
+    "release": "changeset publish",
+    "release-dev": "changeset version --snapshot dev && changeset publish --tag dev",
+    "db:generate": "pnpm --filter @inkeep/agents-core db:generate",
+    "db:push": "pnpm --filter @inkeep/agents-core db:push",
+    "db:migrate": "pnpm --filter @inkeep/agents-core db:migrate",
+    "db:studio": "pnpm --filter @inkeep/agents-core db:studio",
+    "db:clean": "pnpm --filter @inkeep/agents-core db:clean",
+    "db:check": "pnpm --filter @inkeep/agents-core db:check",
+    "db:reset-schema": "pnpm --filter @inkeep/agents-core db:reset-schema",
+    "workflow:profile": "node scripts/workflows/profile.mjs",
+    "workflow:profile:verbose": "node scripts/workflows/profile.mjs --verbose"
   },
   "version": "0.1.0",
   "dependencies": {
@@ -56,7 +68,7 @@
   },
   "packageManager": "pnpm@10.10.0",
   "engines": {
-    "node": ">=20.x"
+    "node": ">=22.0.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
