--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -10,6 +10,7 @@
   "exports": {
     ".": "./dist/index.js",
     "./config": "./dist/config.js",
+    "./commands/create": "./dist/commands/create.js",
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -35,6 +36,7 @@
     "@ai-sdk/openai": "2.0.11",
     "@babel/parser": "^7.23.0",
     "@babel/types": "^7.23.0",
+    "@clack/prompts": "^0.11.0",
     "@inkeep/agents-core": "workspace:^",
     "@inkeep/agents-manage-ui": "workspace:^",
     "@libsql/client": "^0.15.7",
@@ -45,14 +47,17 @@
     "commander": "^14.0.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
+    "fs-extra": "^11.2.0",
     "inquirer": "^9.2.12",
     "inquirer-autocomplete-prompt": "^3.0.1",
     "ora": "^8.0.1",
+    "picocolors": "^1.1.1",
     "recast": "^0.23.0",
     "ts-morph": "^26.0.0",
     "tsx": "^4.20.5"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
     "@vitest/coverage-v8": "^3.2.4",
