--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -8,7 +8,8 @@
     "inkeep": "./dist/index.js"
   },
   "exports": {
-    ".": "./dist/index.js",
+    ".": "./dist/exports.js",
+    "./cli": "./dist/index.js",
     "./config": "./dist/config.js",
     "./package.json": "./package.json"
   },
