--- a/examples/package.json
+++ b/examples/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@inkeep/agents-core": "workspace:*",
-    "@inkeep/agents-run-api": "workspace:*",
     "@inkeep/agents-manage-api": "workspace:*",
+    "@inkeep/agents-run-api": "workspace:*",
     "@inkeep/agents-sdk": "workspace:*",
     "@modelcontextprotocol/sdk": "^1.0.8",
     "zod": "^4.1.5"
@@ -21,7 +21,8 @@
     "@inkeep/agents-cli": "workspace:*",
     "@types/node": "^20.10.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "zod-to-json-schema": "^3.24.6"
   },
   "engines": {
     "node": ">=22.0.0"
