--- a/examples/package.json
+++ b/examples/package.json
@@ -21,8 +21,7 @@
     "@inkeep/agents-cli": "workspace:*",
     "@types/node": "^20.10.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.9.2",
-    "zod-to-json-schema": "^3.24.6"
+    "typescript": "^5.9.2"
   },
   "engines": {
     "node": ">=22.0.0"
