Use tsup instead of tsc

--- a/agents-manage-api/package.json
+++ b/agents-manage-api/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/server.js",
     "test": "vitest --run",
     "test:watch": "vitest",
