--- a/agents-run-api/package.json
+++ b/agents-run-api/package.json
@@ -13,7 +13,7 @@
     "dev": "vite",
     "dev:with-bypass": "PORT=3003 vite",
     "dev:without-bypass": "PORT=3004 INKEEP_AGENTS_RUN_BYPASS_SECRET= vite",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/server.js",
     "test": "./run-tests.sh",
     "test:ci": "vitest --run --config vitest.config.ci.ts",
