--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prebuild": "pnpm install --frozen-lockfile && pnpm sync:licenses",
     "build": "turbo build",
     "dev": "turbo dev",
+    "prepack": "turbo prepack",
     "dev:apis": "turbo dev:apis",
     "pretest": "pnpm install --frozen-lockfile",
     "test": "turbo test",
@@ -46,7 +47,8 @@
   },
   "version": "0.1.0",
   "dependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "tsup": "^8.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.4",
