--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -13,7 +13,8 @@
     "./client-exports": "./src/client-exports.ts"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
+    "prepare": "pnpm build",
     "test": "vitest --run",
     "test:unit": "vitest --run src/__tests__ --exclude src/__tests__/integration/**",
     "test:integration": "vitest --run src/__tests__/integration/",
