--- a/packages/agents-sdk/tsconfig.json
+++ b/packages/agents-sdk/tsconfig.json
@@ -5,7 +5,7 @@
 		"moduleResolution": "bundler",
 		"lib": ["ES2022"],
 		"outDir": "./dist",
-		"rootDir": "./src",
+		"rootDir": "./",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
