feat: add lint check to pre-push hook
- Add pnpm lint to pre-push hook for consistent code quality checks
- Update biome.json to exclude .turbo and .claude directories
- Run formatter to fix existing formatting issues across codebase
- Update hook documentation to reflect new lint check

--- a/biome.json
+++ b/biome.json
@@ -26,7 +26,9 @@
       "!**/drizzle.config.*",
       "!**/.next/**",
       "!**/build/**",
-      "!**/out/**"
+      "!**/out/**",
+      "!**/.turbo/**",
+      "!**/.claude/**"
     ],
     "rules": {
       "recommended": true,
@@ -67,7 +69,9 @@
       "!**/drizzle.config.*",
       "!**/.next/**",
       "!**/build/**",
-      "!**/out/**"
+      "!**/out/**",
+      "!**/.turbo/**",
+      "!**/.claude/**"
     ],
     "lineWidth": 100,
     "indentStyle": "space",
