perf: create unified 'check' command for pre-push optimization
- Added new 'check' turbo task that runs build, lint, typecheck, and test
- Turbo automatically optimizes execution order and caching
- Simplified pre-push hook to use single 'pnpm check' command
- Build runs once and is cached for all dependent tasks
- Reduces duplicate work and speeds up pre-push validation

--- a/turbo.json
+++ b/turbo.json
@@ -107,6 +107,10 @@
     "docs#dev": {
       "cache": false,
       "persistent": true
+    },
+    "check": {
+      "dependsOn": ["build", "lint", "typecheck", "test"],
+      "cache": false
     }
   }
 }
