fix: remove --apply flag from agents-sdk lint script
- Change 'biome check --apply' to 'biome check' in agents-sdk lint script
- Prevents unintended file modifications during lint checks
- Aligns with other packages that only check without applying changes

--- a/packages/agents-sdk/package.json
+++ b/packages/agents-sdk/package.json
@@ -10,7 +10,7 @@
 		"test:watch": "ENVIRONMENT=test vitest",
 		"test:coverage": "ENVIRONMENT=test vitest --run --coverage",
 		"typecheck": "tsc --noEmit",
-		"lint": "biome check --apply .",
+		"lint": "biome check .",
 		"format": "biome format --write .",
 		"prepack": "clean-package",
 		"postpack": "clean-package restore"
