refactor: separate biome lint and check commands for better CI/CD control
- Separate 'lint' (read-only checks) from 'lint:fix' (applies fixes)
- Update all package.json scripts to use 'biome lint' for CI/pre-push
- Add 'lint:fix' command that runs 'biome check --write' for manual fixes
- Update formatter commands to use proper biome format command
- Add format:check for verifying formatting without changes
- Configure turbo.json with lint:fix task
- Fix biome.json configuration to use files.ignore with .biomeignore
- Fix agents-sdk biome.json extends path

This separation ensures:
1. Pre-push hooks only verify code without modifications
2. Developers can explicitly run lint:fix to apply safe fixes
3. CI pipelines get read-only linting for validation
4. Biome's organize imports feature can be used with check --write

Best practice: Run 'pnpm lint' to check, 'pnpm lint:fix' to auto-fix

--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -21,7 +21,9 @@
     "test:coverage": "vitest --run --coverage",
     "test:watch": "vitest --watch",
     "lint": "biome lint src",
+    "lint:fix": "biome check --write src",
     "format": "biome format --write src",
+    "format:check": "biome format src",
     "typecheck": "tsc --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
