--- a/turbo.json
+++ b/turbo.json
@@ -71,6 +71,11 @@
       "inputs": ["$TURBO_DEFAULT$"],
       "outputs": []
     },
+    "lint:fix": {
+      "inputs": ["$TURBO_DEFAULT$"],
+      "outputs": [],
+      "cache": false
+    },
     "typecheck": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$"],
