--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -19,8 +19,10 @@
 		"build:sync": "cp -r public .next/standalone/agents-manage-ui && mkdir -p .next/standalone/agents-manage-ui/.next/ && cp -r .next/static .next/standalone/agents-manage-ui/.next/static",
 		"build": "next build && pnpm build:sync",
 		"start": "next start",
-		"lint": "biome check",
-		"format": "biome check --write",
+		"lint": "biome lint",
+		"lint:fix": "biome check --write",
+		"format": "biome format --write",
+		"format:check": "biome format",
 		"typecheck": "tsc --noEmit",
 		"test": "vitest --run",
 		"test:coverage": "vitest --run --coverage"
