--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "coverage:enforce": "node scripts/enforce-coverage-change.mjs",
     "coverage:check": "pnpm coverage:diff && pnpm coverage:enforce",
     "lint": "turbo lint",
+    "lint:fix": "turbo lint:fix",
     "format": "biome format --write",
-    "format:check": "biome check --write",
+    "format:check": "biome format",
     "typecheck": "turbo typecheck",
     "precheck": "pnpm install --frozen-lockfile",
     "check": "turbo check",
+    "check:fix": "biome check --write",
     "clean": "pnpm -r --parallel exec rm -rf node_modules dist build .next .turbo",
     "clean:turbo": "turbo clean",
     "prepare": "husky",
