fix: resolve agents-core lint issues and add SDK enhancements
**Core Lint Fixes (agents-core):**
- Replace 5 unsafe non-null assertions with proper error handling
- Remove unused imports, variables, and class members
- Fix unused TypeScript directive
- Achieve 100% linting compliance (0 errors, 0 warnings)

**SDK Enhancements (agents-sdk):**
- Add comprehensive builder functions for agent graph construction
- Add experimental agent relation builders
- Add utility functions for ID generation and validation
- Add extensive test coverage for new functionality

**Other improvements:**
- Update project configuration files
- Database schema updates

Result: All packages now have improved code quality and type safety.

--- a/biome.json
+++ b/biome.json
@@ -46,7 +46,8 @@
       },
       "style": {
         "noUnusedTemplateLiteral": "off",
-        "noNonNullAssertion": "warn"
+        "noNonNullAssertion": "warn",
+        "useImportType": "error"
       },
       "performance": {
         "noImgElement": "warn"
