--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -29,6 +29,8 @@
     "db:push": "drizzle-kit push",
     "db:migrate": "drizzle-kit migrate",
     "db:clean": "tsx src/db/clean.ts",
+    "db:delete": "tsx src/db/delete.ts",
+    "db:reset": "pnpm db:delete && pnpm db:push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
     "db:reset-schema": "rm -rf drizzle/* && echo 'All migration files removed, generating new schema' && drizzle-kit generate",
@@ -72,6 +74,7 @@
     "@vitest/coverage-v8": "^2.0.0",
     "clean-package": "^2.2.0",
     "drizzle-kit": "^0.31.4",
+    "tsx": "^4.19.2",
     "typescript": "^5.9.2",
     "vitest": "^3.1.4"
   },
