--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -34,8 +34,8 @@
     "@inkeep/agents-manage-api": "workspace:^",
     "@inkeep/agents-run-api": "workspace:^",
     "@inkeep/agents-core": "workspace:^",
-    "@inkeep/cxkit-react": "0.0.0-rc-20250905022240",
-    "@inkeep/cxkit-react-oss": "0.0.0-rc-20250905022240",
+    "@inkeep/cxkit-react": "@inkeep/cxkit-react-oss",
+    "@inkeep/cxkit-react-oss": "@inkeep/cxkit-react-oss",
     "@lezer/highlight": "^1.2.1",
     "@nangohq/frontend": "^0.66.0",
     "@nangohq/node": "^0.66.0",
