--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@3.1.1/schema.json",
   "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [["@inkeep/*"]],
+  "fixed": [["@inkeep/**"]],
   "linked": [],
   "access": "restricted",
   "baseBranch": "main",
