--- a/agents-run-api/.env.example
+++ b/agents-run-api/.env.example
@@ -6,3 +6,5 @@ ANTHROPIC_API_KEY=
 
 NANGO_SECRET_KEY=
 NANGO_HOST="http://localhost:3050"
+
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT="http://localhost:14318/v1/traces"
