--- a/packages/create-agents/package.json
+++ b/packages/create-agents/package.json
@@ -38,10 +38,13 @@
   "author": "Inkeep <support@inkeep.com>",
   "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
-    "@inkeep/agents-cli": "workspace:^",
-    "commander": "^12.0.0"
+    "@clack/prompts": "^0.11.0",
+    "commander": "^12.0.0",
+    "fs-extra": "^11.0.0",
+    "picocolors": "^1.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.0",
     "@types/node": "^20.12.0",
     "tsx": "^4.7.0",
     "typescript": "^5.4.0",
