--- a/agents-run-api/package.json
+++ b/agents-run-api/package.json
@@ -35,6 +35,7 @@
     "@opentelemetry/auto-instrumentations-node": "^0.64.1",
     "@opentelemetry/baggage-span-processor": "^0.4.0",
     "@opentelemetry/context-async-hooks": "^2.1.0",
+    "@opentelemetry/core": "^2.1.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.205.0",
     "@opentelemetry/resources": "^2.1.0",
     "@opentelemetry/sdk-node": "^0.205.0",
