--- a/agents-manage-ui/.env.example
+++ b/agents-manage-ui/.env.example
@@ -6,5 +6,5 @@ NEXT_PUBLIC_DOCS_BASE_URL=""
 NANGO_SECRET_KEY=
 NEXT_PUBLIC_NANGO_HOST="http://localhost:3050"
 NEXT_PUBLIC_NANGO_CONNECT_BASE_URL="http://localhost:3051"
-SIGNOZ_URL=http://localhost:3080
+NEXT_PUBLIC_SIGNOZ_URL=http://localhost:3080
 SIGNOZ_API_KEY=
