--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,12 @@ name: CI
 
 on:
   push:
-    branches: 
+    branches:
       - main
       - master
   pull_request:
     branches: ['*']
+  merge_group:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
