--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -44,6 +44,7 @@
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.3",
     "commander": "^14.0.0",
+    "degit": "^2.8.4",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
     "find-up": "^7.0.0",
@@ -57,6 +58,7 @@
     "tsx": "^4.20.5"
   },
   "devDependencies": {
+    "@types/degit": "^2.8.6",
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
