--- a/packages/create-agents/package.json
+++ b/packages/create-agents/package.json
@@ -40,10 +40,12 @@
   "dependencies": {
     "@clack/prompts": "^0.11.0",
     "commander": "^12.0.0",
+    "degit": "^2.8.4",
     "fs-extra": "^11.0.0",
     "picocolors": "^1.0.0"
   },
   "devDependencies": {
+    "@types/degit": "^2.8.6",
     "@types/fs-extra": "^11.0.0",
     "@types/node": "^20.12.0",
     "tsx": "^4.7.0",
