--- a/agents-run-api/package.json
+++ b/agents-run-api/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "2.0.2",
+    "@ai-sdk/google": "^2.0.14",
     "@ai-sdk/openai": "2.0.11",
     "@ai-sdk/react": "2.0.11",
     "@hono/node-server": "^1.14.3",
