Use absolute db path and findup

--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -62,6 +62,7 @@
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.2",
     "exit-hook": "^4.0.0",
+    "find-up": "^7.0.0",
     "hono": "^4.9.7",
     "jmespath": "^0.16.0",
     "keytar": "^7.9.0",
