--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ LOG_LEVEL=info
 
 # ============ DATABASE ============
 # SQLite (default for local development)
-# Use relative path from packages/agents-core
-DB_FILE_NAME=file:../../local.db
+# Use the absolute path to db e.g `/Users/user/agents/local.db`. 
+DB_FILE_NAME=
 
 # PostgreSQL (for production-like setup)
 # Uncomment and configure for PostgreSQL:
