initial openrouter and gateway

--- a/agents-run-api/package.json
+++ b/agents-run-api/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "2.0.2",
+    "@ai-sdk/gateway": "^1.0.23",
     "@ai-sdk/google": "^2.0.14",
     "@ai-sdk/openai": "2.0.11",
     "@ai-sdk/react": "2.0.11",
@@ -32,6 +33,7 @@
     "@hono/zod-openapi": "^1.0.2",
     "@inkeep/agents-core": "workspace:^",
     "@modelcontextprotocol/sdk": "^1.17.2",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.64.1",
     "@opentelemetry/baggage-span-processor": "^0.4.0",
