--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,15 @@
 # Inkeep Agents Environment Configuration
 # ============================================
 # This is the single source of truth for all environment variables in the monorepo.
-# Following the Cal.com pattern, all packages reference this root configuration.
 #
 # Setup Instructions:
 # 1. Copy this file to .env and update values
-# 2. For repo-specific overrides, create .env.local
 # 3. For user-global settings across all repos, use ~/.inkeep/config
 #
 # Loading Priority (highest to lowest):
-# 1. .env.local (repo-specific overrides)
-# 2. ~/.inkeep/config (user global settings)
-# 3. .env (main configuration)
+# 1. <path-to-package>/.env (package specific configuration)
+# 2. .env (main configuration)
+# 3. ~/.inkeep/config (user global settings)
 # 4. .env.example (defaults shown here)
 
 # ============ CORE ENVIRONMENT ============
@@ -26,12 +24,6 @@ LOG_LEVEL=info
 # Use the absolute path to db e.g `/Users/user/agents/local.db`. 
 DB_FILE_NAME=
 
-# PostgreSQL (for production-like setup)
-# Uncomment and configure for PostgreSQL:
-# DB_FILE_NAME=postgresql://user:password@localhost:5432/inkeep
-# DATABASE_URL=postgresql://user:password@localhost:5432/inkeep
-# DATABASE_DIRECT_URL=postgresql://user:password@localhost:5432/inkeep
-
 # ============ API ENDPOINTS ============
 # Management API (CRUD operations, configuration)
 INKEEP_AGENTS_MANAGE_API_URL=http://localhost:3002
@@ -43,7 +35,7 @@ NEXT_PUBLIC_INKEEP_AGENTS_RUN_API_URL=http://localhost:3003
 
 # ============ TENANT CONFIGURATION ============
 # Default tenant ID for development
-NEXT_PUBLIC_TENANT_ID=inkeep
+NEXT_PUBLIC_TENANT_ID=default
 
 # ============ AI PROVIDERS ============
 # Required for agent execution
@@ -52,20 +44,8 @@ NEXT_PUBLIC_TENANT_ID=inkeep
 # OpenAI: https://platform.openai.com/
 ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
+GOOGLE_GENERATIVE_AI_API_KEY=
 
-# Optional: Inkeep API for enhanced features
-INKEEP_API_KEY=
-
-# ============ AUTHENTICATION ============
-# NextAuth configuration
-NEXT_PUBLIC_INKEEP_AUTH_TOKEN=
-
-# OAuth configuration for MCP tools
-DEFAULT_OAUTH_CLIENT_ID=mcp-client
-OAUTH_REDIRECT_BASE_URL=http://localhost:3002
-OAUTH_CLIENT_NAME=Inkeep Agent Framework
-OAUTH_CLIENT_URI=https://inkeep.com
-OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
 
 # ============ THIRD PARTY SERVICES ============
 # Nango (for OAuth integrations)
@@ -74,23 +54,12 @@ NANGO_HOST=http://localhost:3050
 NEXT_PUBLIC_NANGO_HOST=http://localhost:3050
 NEXT_PUBLIC_NANGO_CONNECT_BASE_URL=http://localhost:3051
 
-# SigNoz (for observability)
-SIGNOZ_URL=http://localhost:3080
+NEXT_PUBLIC_SIGNOZ_URL=http://localhost:3080
 SIGNOZ_API_KEY=
 
-# Slack MCP Server (optional)
-SLACK_MCP_URL=
+OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:14318/v1/traces
+OTEL_SERVICE_NAME=inkeep-agents
 
 # ============ DOCUMENTATION ============
 # Base URL for documentation site
 NEXT_PUBLIC_DOCS_BASE_URL=
-
-# ============ NOTES ============
-# For production deployments:
-# - Use environment-specific values
-# - Never commit sensitive keys to version control
-# - Use secret management services (AWS Secrets Manager, etc.)
-#
-# For local development with multiple repo copies:
-# - Create ~/.inkeep/config for shared settings (API keys)
-# - Use .env.local for repo-specific overrides (database URLs)
