--- a/.env.example
+++ b/.env.example
@@ -46,7 +46,6 @@ ANTHROPIC_API_KEY=
 OPENAI_API_KEY=
 GOOGLE_GENERATIVE_AI_API_KEY=
 
-
 # ============ THIRD PARTY SERVICES ============
 # Nango (for OAuth integrations)
 NANGO_SECRET_KEY=
@@ -54,12 +53,22 @@ NANGO_HOST=http://localhost:3050
 NEXT_PUBLIC_NANGO_HOST=http://localhost:3050
 NEXT_PUBLIC_NANGO_CONNECT_BASE_URL=http://localhost:3051
 
+# SigNoz (for observability and tracing)
 NEXT_PUBLIC_SIGNOZ_URL=http://localhost:3080
 SIGNOZ_API_KEY=
-
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://localhost:14318/v1/traces
 OTEL_SERVICE_NAME=inkeep-agents
 
 # ============ DOCUMENTATION ============
 # Base URL for documentation site
 NEXT_PUBLIC_DOCS_BASE_URL=
+
+# ============ MCP CONFIGURATION ============
+# MCP OAuth Configuration
+DEFAULT_OAUTH_CLIENT_ID=mcp-client
+OAUTH_REDIRECT_BASE_URL=http://localhost:3002
+
+# OAuth Client Branding (customize OAuth consent screen)
+OAUTH_CLIENT_NAME=Inkeep Agent Framework
+OAUTH_CLIENT_URI=https://inkeep.com
+OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
