--- a/packages/agents-sdk/tsconfig.json
+++ b/packages/agents-sdk/tsconfig.json
@@ -22,5 +22,5 @@
     "types": ["node", "vitest/globals"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src/**/*.test.ts", "src/**/*.spec.ts"]
+  "exclude": ["node_modules", "dist"]
 }
