--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,56 +71,13 @@ jobs:
           echo "Cleaning up any existing database files..."
           find . -name "*.db" -o -name "*.sqlite" | grep -v node_modules | xargs -r rm -f
       
-      # Run CI checks with individual task control for better error reporting
+      # Run all CI checks in parallel with Turborepo
       - name: Run CI checks
         id: ci-check
         run: |
-          set -e
-          EXIT_CODE=0
-          
-          echo "::group::Build"
-          if ! pnpm turbo build --output-logs=errors-only; then
-            echo "::error title=Build Failed::The build task failed. Check the logs for compilation errors."
-            EXIT_CODE=1
-          else
-            echo "✅ Build passed"
-          fi
-          echo "::endgroup::"
-          
-          echo "::group::Lint"
-          if ! pnpm turbo lint --output-logs=errors-only --continue; then
-            echo "::warning title=Lint Failed::Linting errors detected. Run 'pnpm lint' locally to see details."
-            # Don't fail CI for lint errors for now - can be made strict later
-            # EXIT_CODE=1
-          else
-            echo "✅ Lint passed"
-          fi
-          echo "::endgroup::"
-          
-          echo "::group::Typecheck"
-          if ! pnpm turbo typecheck --output-logs=errors-only --continue; then
-            echo "::warning title=Typecheck Issues::TypeScript type checking has issues. Run 'pnpm typecheck' locally to see details."
-            # Don't fail CI for typecheck errors for now - can be made strict later
-            # EXIT_CODE=1
-          else
-            echo "✅ Typecheck passed"
-          fi
-          echo "::endgroup::"
-          
-          echo "::group::Test"
-          if ! pnpm turbo test --output-logs=errors-only; then
-            echo "::error title=Test Failed::Tests failed. Run 'pnpm test' locally to see details."
-            EXIT_CODE=1
-          else
-            echo "✅ Tests passed"
-          fi
-          echo "::endgroup::"
-          
-          # Fail the CI if any critical checks failed (build or test)
-          if [ $EXIT_CODE -ne 0 ]; then
-            echo "::error::CI failed due to build or test failures. See details above."
-          fi
-          exit $EXIT_CODE
+          # Run all checks in parallel using Turborepo's dependency graph
+          # This will build once and cache, then run lint, typecheck, and test in parallel
+          pnpm check
         env:
           TURBO_TELEMETRY_DISABLED: 1
           TURBO_CACHE_DIR: .turbo
@@ -139,22 +96,15 @@ jobs:
         run: |
           echo "## CI Run Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          
+
           if [ "${{ steps.ci-check.outcome }}" == "success" ]; then
             echo "✅ **All CI checks passed successfully!**" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "All build, lint, typecheck, and test tasks completed without errors." >> $GITHUB_STEP_SUMMARY
           else
             echo "❌ **CI checks failed**" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "**Critical failures will block merging. Fix build and test failures before proceeding.**" >> $GITHUB_STEP_SUMMARY
+            echo "One or more checks failed. Review the logs above for details." >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Run \`pnpm check\` locally to reproduce the CI checks." >> $GITHUB_STEP_SUMMARY
           fi
-          
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Task Results:" >> $GITHUB_STEP_SUMMARY
-          echo "- Build: Check logs for status" >> $GITHUB_STEP_SUMMARY
-          echo "- Lint: ⚠️ Has warnings (non-blocking)" >> $GITHUB_STEP_SUMMARY
-          echo "- Typecheck: ⚠️ Has warnings (non-blocking)" >> $GITHUB_STEP_SUMMARY
-          echo "- Test: Check logs for status" >> $GITHUB_STEP_SUMMARY
-          
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Note:" >> $GITHUB_STEP_SUMMARY
-          echo "Build and Test failures will fail the CI. Lint and Typecheck issues are shown as warnings." >> $GITHUB_STEP_SUMMARY
