--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -54,6 +54,7 @@
     "ora": "^8.0.1",
     "picocolors": "^1.1.1",
     "pino": "^9.11.0",
+    "prompts": "^2.4.2",
     "recast": "^0.23.0",
     "ts-morph": "^26.0.0",
     "tsx": "^4.20.5"
@@ -63,6 +64,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.10.0",
+    "@types/prompts": "^2.4.9",
     "@vitest/coverage-v8": "^3.2.4",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
