--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -8,7 +8,9 @@
     "./package.json": "./package.json"
   },
   "files": [
-    ".next/standalone"
+    ".next/standalone",
+    "!.next/standalone/**/node_modules",
+    "!.next/standalone/node_modules"
   ],
   "publishConfig": {
     "access": "public",
