--- a/packages/agents-core/package.json
+++ b/packages/agents-core/package.json
@@ -67,6 +67,7 @@
     "jmespath": "^0.16.0",
     "keytar": "^7.9.0",
     "nanoid": "^5.0.9",
+    "pino": "^9.11.0",
     "ts-pattern": "^5.7.1",
     "zod": "^4.1.5"
   },
