--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -1,14 +1,24 @@
 {
   "name": "@inkeep/agents-manage-ui",
   "version": "0.3.0",
+  "type": "module",
   "license": "SEE LICENSE IN LICENSE.md",
-  "main": ".next/standalone/server.js",
+  "main": "index.js",
+  "types": "index.d.ts",
   "exports": {
-    ".": "./.next/standalone/server.js",
+    ".": "./index.js",
     "./package.json": "./package.json"
   },
   "files": [
-    ".next/standalone"
+    "src",
+    "public",
+    "next.config.ts",
+    "postcss.config.mjs",
+    "tailwind.config.mjs",
+    "tsconfig.json",
+    "index.js",
+    "index.d.ts",
+    "package.json"
   ],
   "publishConfig": {
     "access": "public",
